[gd_scene load_steps=3 format=3 uid="uid://dspeqh42ks1xd"]

[ext_resource type="Script" uid="uid://cquskesaq2iet" path="res://scripts/ui_scripts/spells.gd" id="1_xb60a"]
[ext_resource type="PackedScene" uid="uid://grvpi2lsf4yb" path="res://scenes/ui/slot.tscn" id="2_xb60a"]

[node name="spells" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xb60a")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.364706)

[node name="spell_selector" type="GridContainer" parent="background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -52.0
offset_right = 70.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(70, 52)
columns = 4

[node name="space" type="Panel" parent="background/spell_selector"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="1" parent="background/spell_selector" instance=ExtResource("2_xb60a")]
layout_mode = 2

[node name="space2" type="Panel" parent="background/spell_selector"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="extra1" parent="background/spell_selector" instance=ExtResource("2_xb60a")]
layout_mode = 2

[node name="2" parent="background/spell_selector" instance=ExtResource("2_xb60a")]
layout_mode = 2

[node name="space3" type="Panel" parent="background/spell_selector"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="3" parent="background/spell_selector" instance=ExtResource("2_xb60a")]
layout_mode = 2

[node name="space4" type="Panel" parent="background/spell_selector"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="space5" type="Panel" parent="background/spell_selector"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="4" parent="background/spell_selector" instance=ExtResource("2_xb60a")]
layout_mode = 2

[node name="space6" type="Panel" parent="background/spell_selector"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="extra2" parent="background/spell_selector" instance=ExtResource("2_xb60a")]
layout_mode = 2

[node name="mana" type="Label" parent="background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_right = 51.0
offset_bottom = 22.3333
grow_horizontal = 2
text = "total mana: 0"
